refactor Business rules reservations